# net-razor

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  pyrightconfig.json
dev-tools/src/net_razor_dev/: __main__.py  runner.py
docs/: phase1.md
mcp-server/: .env.example  pyrightconfig.json
mcp-server/src/net_razor_mcp/: __main__.py  client.py  config.py  server.py  tools.py
orchestrator/: .env.example
orchestrator/src/net_razor_orchestrator/: __main__.py  config.py  hn_client.py  main.py  planner.py  ranking.py  service.py  storage.py  x_client.py  yt_client.py
scripts/: mcp_smoke.py  net-razor-mcp
shared/src/net_razor_shared/: __init__.py  logging.py  models.py
skills/: youtube-digest.md
skills/youtube-digest/: SKILL.md
src/net_razor/: __init__.py  app.py  clock.py  config.py  diagnostics.py  errors.py  logging.py  models.py  paths.py
src/net_razor/audit/: recorder.py  store.py
src/net_razor/cli/: main.py
src/net_razor/mcp/: __main__.py  server.py
src/net_razor/sources/: base.py  hn.py
src/net_razor/sources/x/: __init__.py  bird_backend.py  models.py  normalization.py  query.py  source.py  subprocess_runner.py
src/net_razor/sources/yt/: __init__.py  channel_ref.py  digest.py  enrich.py  rss_client.py  search_client.py  source.py  transcript_client.py  video_id.py
tests/: conftest.py  test_api.py  test_app.py  test_audit.py  test_backend.py  test_clock.py  test_dev_runner.py  test_hn_api.py  test_hn_source.py  test_logging.py  test_logging_config.py  test_mcp_and_cli.py  test_mcp_tools.py  test_models.py  test_node_backend.py  test_normalization.py  test_orchestrator.py  test_planner_ranking.py  test_read_only_vendor.py  test_search_service.py  test_shared_models.py  test_x_backend.py  test_x_source.py  test_youtube_transcripts_api.py  test_yt_channel_ref.py  test_yt_digest.py  test_yt_new_videos.py  test_yt_rss_client.py  test_yt_search_client.py  test_yt_source.py
tests/fixtures/: raw_tweets.json  search_timeline.json
tests/fixtures/node/: malformed.mjs  sleep.mjs
tests/integration/: test_live_search.py
tests/js/: test-search-client.mjs  test-search-parser.mjs
