[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "net-razor"
version = "0.1.0"
description = "MCP-first local research runtime for X, Hacker News, and YouTube."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.9",
    "pydantic-settings>=2.3",
    "youtube-transcript-api>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
net-razor = "net_razor.cli.main:main"
net-razor-mcp = "net_razor.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"net_razor.sources.x" = [
    "vendor/bird-search/*.mjs",
    "vendor/bird-search/*.json",
    "vendor/bird-search/LICENSE",
    "vendor/bird-search/UPSTREAM.md",
    "vendor/bird-search/lib/*.js",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["_reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: opt-in tests that call the live X service",
]
addopts = "-m 'not integration'"
